force-app/main/default/objects/Account/fields/Maklerbetreuer_Wirtschaftshaus__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer_Wirtschaftshaus__c</fullName>
    <label>Maklerbetreuer Wirtschaftshaus(veraltet)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andreas Pohl</fullName>
            </value>
            <value>
                <fullName>Attila Dachwitz</fullName>
            </value>
            <value>
                <fullName>Bastian Dörge</fullName>
            </value>
            <value>
                <fullName>Boris Bökert</fullName>
            </value>
            <value>
                <fullName>Christoph Ellermann</fullName>
            </value>
            <value>
                <fullName>Erich Pilz</fullName>
            </value>
            <value>
                <fullName>Frank Köpsell</fullName>
            </value>
            <value>
                <fullName>Harald Senftleben</fullName>
            </value>
            <value>
                <fullName>Jana Pawils</fullName>
            </value>
            <value>
                <fullName>Johann Kuipers</fullName>
            </value>
            <value>
                <fullName>Jonas Laue</fullName>
            </value>
            <value>
                <fullName>Jürgen Engler</fullName>
            </value>
            <value>
                <fullName>Karsten Fengler</fullName>
            </value>
            <value>
                <fullName>Kelvin Schwabe</fullName>
            </value>
            <value>
                <fullName>Lars Wagner</fullName>
            </value>
            <value>
                <fullName>Marc Claes</fullName>
            </value>
            <value>
                <fullName>Marco Ellermann</fullName>
            </value>
            <value>
                <fullName>Martin Ledvinka</fullName>
            </value>
            <value>
                <fullName>Maurice Fuhrmann</fullName>
            </value>
            <value>
                <fullName>Max Hergt</fullName>
            </value>
            <value>
                <fullName>Mirco Buchholz</fullName>
            </value>
            <value>
                <fullName>Nils Nebel</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>Peter Eulitz</fullName>
            </value>
            <value>
                <fullName>Raik Lubitz</fullName>
            </value>
            <value>
                <fullName>Ralf Döring</fullName>
            </value>
            <value>
                <fullName>Robin Bergmann</fullName>
            </value>
            <value>
                <fullName>Rüdiger Panzer-Sennholz</fullName>
            </value>
            <value>
                <fullName>Sandro Pawils</fullName>
            </value>
            <value>
                <fullName>Susanne Köppel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>