force-app/main/default/objects/Account/fields/MaklerbetreuerCarestoneAccount__c.field-meta.xml
<CustomField>
    <fullName>MaklerbetreuerCarestoneAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maklerbetreuer Carestone-Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Maklerbetreuer Carestone-Account)</relationshipLabel>
    <relationshipName>BetreuteAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>