force-app/main/default/objects/Account/fields/Maklerprovision__c.field-meta.xml
<CustomField>
    <fullName>Maklerprovision__c</fullName>
    <label>Maklerprovision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>