force-app/main/default/objects/Account/fields/Maklerschutz_besteht__c.field-meta.xml
<CustomField>
    <fullName>Maklerschutz_besteht__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Wenn angehakt besteht aktuell ein Maklerschutz für den Makler</inlineHelpText>
    <label>Maklerschutz besteht</label>
    <type>Checkbox</type>
</CustomField>