force-app/main/default/objects/Account/fields/Maklerschutz_bis__c.field-meta.xml
<CustomField>
    <fullName>Maklerschutz_bis__c</fullName>
    <inlineHelpText>Das Datum, bis zu welchem ein Makler geschützt ist</inlineHelpText>
    <label>Maklerschutz bis</label>
    <type>DateTime</type>
</CustomField>