force-app/main/default/objects/Account/fields/Maklervertrag_g_ltig_seit__c.field-meta.xml
<CustomField>
    <fullName>Maklervertrag_g_ltig_seit__c</fullName>
    <label>Maklerauftrag WH gültig seit</label>
    <type>Date</type>
</CustomField>