force-app/main/default/objects/Account/fields/Maklervertrag_verschickt_am__c.field-meta.xml
<CustomField>
    <fullName>Maklervertrag_verschickt_am__c</fullName>
    <label>Maklerauftrag WH verschickt am</label>
    <type>Date</type>
</CustomField>