force-app/main/default/objects/Account/fields/Mandant_in_Datev_anlegen__c.field-meta.xml
<CustomField>
    <fullName>Mandant_in_Datev_anlegen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wenn angehakt, wird eine Mail ausgelöst, dass ein Mandant angelegt werden soll. Rückmeldung folgt per Mail. Dann muss die Mandantennummer etc. manuell eingeben werden.</inlineHelpText>
    <label>Mandant in Datev anlegen</label>
    <type>Checkbox</type>
</CustomField>