force-app/main/default/objects/Account/fields/Marketingzuschuss__c.field-meta.xml
<CustomField>
    <fullName>Marketingzuschuss__c</fullName>
    <label>Marketingzuschuss</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>