force-app/main/default/objects/Account/fields/NamePotenzialanalyse__c.field-meta.xml
<CustomField>
    <fullName>NamePotenzialanalyse__c</fullName>
    <inlineHelpText>Der Name der als Ergebnis der Potenzialanalyse gefunden wurde. Falls richtig, bitte den Account-Namen damit ersetzen</inlineHelpText>
    <label>Name Potenzialanalyse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>