force-app/main/default/objects/Account/fields/Nationwide__c.field-meta.xml
<CustomField>
    <fullName>Nationwide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National</label>
    <type>Checkbox</type>
</CustomField>