force-app/main/default/objects/Account/fields/NewsArtikel__c.field-meta.xml
<CustomField>
    <fullName>NewsArtikel__c</fullName>
    <label>News Artikel</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>