force-app/main/default/objects/Account/fields/Nicht_umschl_sseln_Betreuungsaktivit_t__c.field-meta.xml
<CustomField>
    <fullName>Nicht_umschl_sseln_Betreuungsaktivit_t__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hier den Haken setzen, wenn der Account immun gegen Umschlüssellungen bei Betreuungsaktivitäten sein soll</inlineHelpText>
    <label>Nicht umschlüsseln - Betreuungsaktivität</label>
    <type>Checkbox</type>
</CustomField>