force-app/main/default/objects/Account/fields/OutgoingCallsCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>OutgoingCallsCurrentYear__c</fullName>
    <label>Anzahl ausgehende Telefonate dieses Jahr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>