force-app/main/default/objects/Account/fields/Overhead_Vereinbarung__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Vereinbarung__c</fullName>
    <description>Auswahl für die Overhead-Vereinbarung für Makler, die andere Makler empfehlen.
(Tippprovision, Zuführerprovision, Empfehlungsprovision)
Der Provisionszeitraum beginnt mit der Gültigkeit des Maklerauftrags.</description>
    <inlineHelpText>Auswahl für die Overhead-Vereinbarung für Makler, die andere Makler empfehlen.
(Tippprovision, Zuführerprovision, Empfehlungsprovision)
Der Provisionszeitraum beginnt mit der Gültigkeit des Maklerauftrags.</inlineHelpText>
    <label>Overheadprovision in %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Keine</fullName>
                <default>true</default>
                <label>Keine</label>
            </value>
            <value>
                <fullName>0.25</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1.25</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>1.75</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>2.25</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>2.75</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>3.25</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>3.75</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>