force-app/main/default/objects/Account/fields/OverheadProvisionBis__c.field-meta.xml
<CustomField>
    <fullName>OverheadProvisionBis__c</fullName>
    <inlineHelpText>Bis wann erhält der im Feld &quot;Overhead Empfänger&quot; angegebene Makler seine Provision?</inlineHelpText>
    <label>Overhead Provision bis</label>
    <type>Date</type>
</CustomField>