force-app/main/default/objects/Account/fields/PhoneCallBackofficeDone__c.field-meta.xml
<CustomField>
    <fullName>PhoneCallBackofficeDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telefonat Backoffice stattgefunden</label>
    <type>Checkbox</type>
</CustomField>