force-app/main/default/objects/Account/fields/PhoneCallBackofficeNotes__c.field-meta.xml
<CustomField>
    <fullName>PhoneCallBackofficeNotes__c</fullName>
    <label>Telefonat Backoffice Notizen</label>
    <type>TextArea</type>
</CustomField>