force-app/main/default/objects/Account/fields/Postfach__c.field-meta.xml
<CustomField>
    <fullName>Postfach__c</fullName>
    <label>Postfach</label>
    <length>30</length>
    <type>Text</type>
</CustomField>