force-app/main/default/objects/Account/fields/Postfach_PLZ__c.field-meta.xml
<CustomField>
    <fullName>Postfach_PLZ__c</fullName>
    <label>Postfach PLZ</label>
    <length>30</length>
    <type>Text</type>
</CustomField>