force-app/main/default/objects/Account/fields/Potenzialanalyse__c.field-meta.xml
<CustomField>
    <fullName>Potenzialanalyse__c</fullName>
    <label>Potenzialanalyse</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>