force-app/main/default/objects/Account/fields/PotenzialanalyseErfasst__c.field-meta.xml
<CustomField>
    <fullName>PotenzialanalyseErfasst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potenzialanalyse erfasst</label>
    <type>Checkbox</type>
</CustomField>