force-app/main/default/objects/Account/fields/PotenzialanalyseErfasstAm__c.field-meta.xml
<CustomField>
    <fullName>PotenzialanalyseErfasstAm__c</fullName>
    <label>Potenzialanalyse erfasst am</label>
    <type>Date</type>
</CustomField>