force-app/main/default/objects/Account/fields/PotenzialanalyseStarten__c.field-meta.xml
<CustomField>
    <fullName>PotenzialanalyseStarten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potenzialanalyse starten</label>
    <type>Checkbox</type>
</CustomField>