force-app/main/default/objects/Account/fields/PrimaererAnsprechpartner__c.field-meta.xml
<CustomField>
    <fullName>PrimaererAnsprechpartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primärer Ansprechpartner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primärer Ansprechpartner)</relationshipLabel>
    <relationshipName>AccountsPrimaryContact</relationshipName>
    <type>Lookup</type>
</CustomField>