force-app/main/default/objects/Account/fields/ProbabilitiesOpportunitiesSum__c.field-meta.xml
<CustomField>
    <fullName>ProbabilitiesOpportunitiesSum__c</fullName>
    <label>Wahrscheinlichkeiten VKCs</label>
    <summarizedField>Opportunity.Probability</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.ForecastCurrentYear__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>