force-app/main/default/objects/Account/fields/Provisionsempf_nger__c.field-meta.xml
<CustomField>
    <fullName>Provisionsempf_nger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overhead Empfänger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Provisionsempfänger)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>