force-app/main/default/objects/Account/fields/Rechtsform__c.field-meta.xml
<CustomField>
    <fullName>Rechtsform__c</fullName>
    <label>Rechtsform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>