force-app/main/default/objects/Account/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regional</label>
    <type>Checkbox</type>
</CustomField>