force-app/main/default/objects/Account/fields/Registernummer__c.field-meta.xml
<CustomField>
    <fullName>Registernummer__c</fullName>
    <label>Registernummer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>