force-app/main/default/objects/Account/fields/registriert_bei__c.field-meta.xml
<CustomField>
    <fullName>registriert_bei__c</fullName>
    <label>registriert bei</label>
    <length>40</length>
    <type>Text</type>
</CustomField>