force-app/main/default/objects/Account/fields/ReparentDate__c.field-meta.xml
<CustomField>
    <fullName>ReparentDate__c</fullName>
    <label>Umgeschlüsselt am</label>
    <type>DateTime</type>
</CustomField>