force-app/main/default/objects/Account/fields/ScoreText__c.field-meta.xml
<CustomField>
    <fullName>ScoreText__c</fullName>
    <formula>If(Score__c &lt;= 30, &apos;Kalter Lead&apos;, IF(Score__c &lt;= 60, &apos;Warmer Lead&apos;, IF(Score__c &lt;= 80, &apos;Heißer Lead&apos;, &apos;Priority Lead&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Text</label>
    <type>Text</type>
</CustomField>