force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neu</fullName>
                <default>true</default>
                <label>Neu</label>
            </value>
            <value>
                <fullName>Kontaktiert</fullName>
            </value>
            <value>
                <fullName>Terminiert</fullName>
            </value>
            <value>
                <fullName>Aktiv</fullName>
            </value>
            <value>
                <fullName>Inaktiv</fullName>
            </value>
            <value>
                <fullName>Verloren</fullName>
            </value>
            <value>
                <fullName>Blacklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>