force-app/main/default/objects/Account/fields/Steuernummer__c.field-meta.xml
<CustomField>
    <fullName>Steuernummer__c</fullName>
    <label>Steuernummer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>