force-app/main/default/objects/Account/fields/Struktur_aktualisieren__c.field-meta.xml
<CustomField>
    <fullName>Struktur_aktualisieren__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Derzeit werden folgende Strukturelemente aktualisiert:
-Maklerbetreuer WH
-Externen Maklerbetreuer anzeigen

Es kann noch zu Fehlern kommen</inlineHelpText>
    <label>Struktur aktualisieren</label>
    <type>Checkbox</type>
</CustomField>