force-app/main/default/objects/Account/fields/Telefonkampagne__c.field-meta.xml
<CustomField>
    <fullName>Telefonkampagne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telefonkampagne</label>
    <type>Checkbox</type>
</CustomField>