force-app/main/default/objects/Account/fields/TextColor__c.field-meta.xml
<CustomField>
    <fullName>TextColor__c</fullName>
    <defaultValue>&quot;243, 192, 92&quot;</defaultValue>
    <label>TextColor</label>
    <length>14</length>
    <type>Text</type>
</CustomField>