force-app/main/default/objects/Account/fields/Tippgeber__c.field-meta.xml
<CustomField>
    <fullName>Tippgeber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Wer hat diesen Partner dem WirtschaftsHaus empfohlen (Passivprovision)?</inlineHelpText>
    <label>Tippgeber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Tippgeber)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>