force-app/main/default/objects/Account/fields/Tippgeber_in__c.field-meta.xml
<CustomField>
    <fullName>Tippgeber_in__c</fullName>
    <inlineHelpText>Wie viel Prozent erhält der Tippgeber? 0,5 für 1 Jahr oder 0,25 für 2 Jahre(ab Geltungsbeginn des Maklerauftrags)</inlineHelpText>
    <label>Tippprovision in %</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>