force-app/main/default/objects/Account/fields/TippgeberProvisionBis__c.field-meta.xml
<CustomField>
    <fullName>TippgeberProvisionBis__c</fullName>
    <inlineHelpText>Bis wann erhält der im Feld &quot;Tippgeber&quot; angegebene Makler seine Provision?</inlineHelpText>
    <label>Tippgeber Provision bis</label>
    <type>Date</type>
</CustomField>