force-app/main/default/objects/Account/fields/TotalAssetsInBillion__c.field-meta.xml
<CustomField>
    <fullName>TotalAssetsInBillion__c</fullName>
    <label>Bilanzsumme in Mrd. €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>