force-app/main/default/objects/Account/fields/TrustpilotUrl__c.field-meta.xml
<CustomField>
    <fullName>TrustpilotUrl__c</fullName>
    <label>Trustpilot Url</label>
    <type>Url</type>
</CustomField>