force-app/main/default/objects/Account/fields/Umsatzsteuerbefreit__c.field-meta.xml
<CustomField>
    <fullName>Umsatzsteuerbefreit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Umsatzsteuerbefreit</label>
    <type>Checkbox</type>
</CustomField>