force-app/main/default/objects/Account/fields/umschl_sselung__c.field-meta.xml
<CustomField>
    <fullName>umschl_sselung__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Umschlüsselung</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Umschlüsselung)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>