force-app/main/default/objects/Account/fields/UST_Veranlagung__c.field-meta.xml
<CustomField>
    <fullName>UST_Veranlagung__c</fullName>
    <label>UST Veranlagung</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>