force-app/main/default/objects/Account/fields/UStd_Id__c.field-meta.xml
<CustomField>
    <fullName>UStd_Id__c</fullName>
    <label>USt-IdNr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>