force-app/main/default/objects/Account/fields/Verkaufschancen__c.field-meta.xml
<CustomField>
    <fullName>Verkaufschancen__c</fullName>
    <label>Anzahl Gewonnene VKCs ab 2017</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>VKC gewonnen, Notartermin hat stattgefunden</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Notartermin__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2017</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>