force-app/main/default/objects/Account/fields/Verkaufsprovision__c.field-meta.xml
<CustomField>
    <fullName>Verkaufsprovision__c</fullName>
    <label>Verkaufsprovision</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>