force-app/main/default/objects/Account/fields/Versicherungsnummer__c.field-meta.xml
<CustomField>
    <fullName>Versicherungsnummer__c</fullName>
    <label>Versicherungsnummer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>