force-app/main/default/objects/Account/fields/Vertriebskontakt_verboten_Makler__c.field-meta.xml
<CustomField>
    <fullName>Vertriebskontakt_verboten_Makler__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wird auf untergeordnete Accounts und Kontakte übertragen</inlineHelpText>
    <label>Vertriebskontakt verboten - Makler</label>
    <type>Checkbox</type>
</CustomField>