force-app/main/default/objects/Account/fields/VPFreigabeZuUebergeordnetenAccounts__c.field-meta.xml
<CustomField>
    <fullName>VPFreigabeZuUebergeordnetenAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VP Freigabe zu übergeordneten Accounts</label>
    <type>Checkbox</type>
</CustomField>