force-app/main/default/objects/Account/fields/VPUserLastLogin__c.field-meta.xml
<CustomField>
    <fullName>VPUserLastLogin__c</fullName>
    <label>VP Benutzer Letzter Login</label>
    <type>DateTime</type>
</CustomField>