force-app/main/default/objects/Account/fields/WHS_Maklerauftrag__c.field-meta.xml
<CustomField>
    <fullName>WHS_Maklerauftrag__c</fullName>
    <description>Abbildung des Prozesses zur Auslösung eines Maklerauftrags; letzter Status heisst unterschrieben vom Vorstand und versendet an den Makler (d.h. Vereinbarung ist ab diesem Tag gültig)</description>
    <inlineHelpText>Abbildung des Prozesses zur Auslösung eines Maklerauftrags; letzter Status heisst unterschrieben vom Vorstand und versendet an den Makler (d.h. Vereinbarung ist ab diesem Tag gültig)</inlineHelpText>
    <label>WH Maklerauftrag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Keine Vereinbarung</fullName>
                <default>true</default>
                <label>Keine Vereinbarung</label>
            </value>
            <value>
                <fullName>Vom Maklerbetreuer angefordert</fullName>
            </value>
            <value>
                <fullName>Erstellt und an Makler versendet</fullName>
            </value>
            <value>
                <fullName>Unterschrieben eingegangen</fullName>
            </value>
            <value>
                <fullName>Maklerauftrag beidseitig unterzeichnet</fullName>
            </value>
            <value>
                <fullName>Makler mit altem Vertrag</fullName>
            </value>
            <value>
                <fullName>Makler ohne eigenen Vertrag</fullName>
            </value>
            <value>
                <fullName>Vom Makler gekündigt</fullName>
            </value>
            <value>
                <fullName>Vom WH gekündigt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>