force-app/main/default/objects/Account/fields/WHS_Maklerauftrag_Bearbeitungsdatum__c.field-meta.xml
<CustomField>
    <fullName>WHS_Maklerauftrag_Bearbeitungsdatum__c</fullName>
    <label>WH Maklerauftrag Bearbeitungsdatum</label>
    <type>DateTime</type>
</CustomField>