force-app/main/default/objects/Account/fields/WHS_Maklerprovision__c.field-meta.xml
<CustomField>
    <fullName>WHS_Maklerprovision__c</fullName>
    <description>Angabe der Provision vom Makler bei WH Service für alle Objekte global</description>
    <inlineHelpText>Angabe der Provision vom Makler bei WH Service für alle Objekte global</inlineHelpText>
    <label>CS Maklerprovision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>keine</fullName>
                <default>true</default>
                <label>keine</label>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>2.5</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>3.5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>5.5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>6.5</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>7.5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>8.5</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>9.5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
            <value>
                <fullName>1.25</fullName>
            </value>
            <value>
                <fullName>1.75</fullName>
            </value>
            <value>
                <fullName>2.25</fullName>
            </value>
            <value>
                <fullName>2.75</fullName>
            </value>
            <value>
                <fullName>3.25</fullName>
            </value>
            <value>
                <fullName>3.75</fullName>
            </value>
            <value>
                <fullName>4.25</fullName>
            </value>
            <value>
                <fullName>4.75</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>