force-app/main/default/objects/Account/fields/XingUrl__c.field-meta.xml
<CustomField>
    <fullName>XingUrl__c</fullName>
    <label>Xing Url</label>
    <type>Url</type>
</CustomField>