force-app/main/default/objects/Account/recordTypes/Brokerage.recordType-meta.xml
<RecordType>
    <fullName>Brokerage</fullName>
    <active>true</active>
    <label>Vertriebspartner</label>
</RecordType>