force-app/main/default/objects/Account/recordTypes/CarestoneCompany.recordType-meta.xml
<RecordType>
    <fullName>CarestoneCompany</fullName>
    <active>true</active>
    <label>Carestone Gesellschaft</label>
</RecordType>