force-app/main/default/objects/Account/recordTypes/EndCustomerFinancier.recordType-meta.xml
<RecordType>
    <fullName>EndCustomerFinancier</fullName>
    <active>true</active>
    <label>Endkundenfinanzierer</label>
</RecordType>