force-app/main/default/objects/Account/recordTypes/JointVenturePartner.recordType-meta.xml
<RecordType>
    <fullName>JointVenturePartner</fullName>
    <active>true</active>
    <label>Joint-Venture-Partner</label>
</RecordType>