force-app/main/default/objects/Account/recordTypes/Notary.recordType-meta.xml
<RecordType>
    <fullName>Notary</fullName>
    <active>true</active>
    <label>Notar</label>
</RecordType>