force-app/main/default/objects/Account/recordTypes/ProjectFinancier.recordType-meta.xml
<RecordType>
    <fullName>ProjectFinancier</fullName>
    <active>true</active>
    <label>Projektfinanzierer</label>
</RecordType>