force-app/main/default/objects/Account/recordTypes/PropertyDeveloper.recordType-meta.xml
<RecordType>
    <fullName>PropertyDeveloper</fullName>
    <active>true</active>
    <label>Bauträger</label>
</RecordType>