force-app/main/default/objects/Account/recordTypes/Seller.recordType-meta.xml
<RecordType>
    <fullName>Seller</fullName>
    <active>true</active>
    <label>Verkäufer</label>
</RecordType>