force-app/main/default/objects/Account/validationRules/Ansaessigkeit_ausserhalb_Deutschland.validationRule-meta.xml
<ValidationRule>
    <fullName>Ansaessigkeit_ausserhalb_Deutschland</fullName>
    <active>true</active>
    <errorConditionFormula>AnsaessigAusserhalbVonDeutschland__c &amp;&amp;
IsBlank( UStd_Id__c )</errorConditionFormula>
    <errorDisplayField>UStd_Id__c</errorDisplayField>
    <errorMessage>Bitte füllen Sie die USt. Id. aus</errorMessage>
</ValidationRule>