force-app/main/default/objects/Account/validationRules/Hinweis_zur_MwSt_ist_leer.validationRule-meta.xml
<ValidationRule>
    <fullName>Hinweis_zur_MwSt_ist_leer</fullName>
    <active>true</active>
    <errorConditionFormula>IsChanged(Umsatzsteuerbefreit__c)
&amp;&amp; IsBlank(Hinweis_zur_MwSt__c)</errorConditionFormula>
    <errorDisplayField>Hinweis_zur_MwSt__c</errorDisplayField>
    <errorMessage>Bitte gib hier an, woher die Information kommt, welchen MwSt-Satz der Makler hat</errorMessage>
</ValidationRule>